Added basic card

--- a/src/Card/index.scss
+++ b/src/Card/index.scss
@@ -1,154 +1,25 @@
 @import '../variables';
 
-$powerPointSize: 20px;
-
-%icon {
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    z-index: 2;
-    height: $powerPointSize;
-    font-size: 16px;
-    line-height: $powerPointSize;
-    color: $white;
-    text-align: center;
-    cursor: pointer;
-    border-radius: 50%;
-    transition: background 0.3s, color 0.3s;
-
-    .fa {
-        text-shadow: 0 0 2px $black;
-    }
-}
-
-.wakeonlan {
-    display: flex;
-    padding: 0 10px 10px;
-    flex-wrap: wrap;
-    align-content: stretch;
-    align-items: stretch;
-}
-
-.wolCard {
+.materialCard {
     position: relative;
     display: flex;
-    min-width: 210px; // the buttons width on one line
-    padding: 0 5px;
-    margin-top: 10px;
-    flex-grow: 1;
     align-content: stretch;
     align-items: stretch;
     flex-direction: column;
+    flex-grow: 1;
+    min-width: 210px;
+    padding: 0 5px;
+    margin-top: 10px;
 
-    &.new {
-        min-width: 320px;
-
-        .wrapper {
-            padding: 10px 10px 0;
-        }
-        .buttonsRow {
-            .materialBtn {
-                &:first-of-type {
-                    color: $main-500;
-                }
-            }
-        }
-    }
-    &:not(.new) {
-        .buttonsRow {
-            .materialBtn {
-                &:last-of-type {
-                    color: $main-500;
-                }
-            }
-        }
+    &.shadow {
+        box-shadow: 0 0 5px rgba($black, 0.5);
     }
     .wrapper {
         display: flex;
-        overflow: hidden;
-        border-radius: 2px;
-        box-shadow: 0 0 5px rgba($black, 0.8);
-        flex-grow: 1;
         flex-basis: 100%;
         flex-direction: column;
-    }
-    .power {
-        @extend %icon;
-        left: 15px;
-        width: $powerPointSize;
-        overflow: hidden;
-        background: $red-500;
-
-        .fa {
-            opacity: 0;
-            transition: opacity 0.3s;
-        }
-        &.pinging {
-            background: transparent;
-
-            .fa {
-                opacity: 1;
-            }
-        }
-        &.on {
-            background: $green-500;
-        }
-    }
-    .trash {
-        @extend %icon;
-        right: 15px;
-
-        .fa {
-            font-size: 20px;
-        }
-    }
-    .image {
-        position: relative;
-        width: 100%;
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
         flex-grow: 1;
-
-        &:before {
-            display: block;
-            width: 100%;
-            padding-top: 56.25%;
-            content: '';
-        }
-    }
-    .titleRow {
-        padding: 20px 16px 16px;
-        flex-grow: 0;
-
-        .title {
-            font-size: 24px;
-            font-weight: 500;
-            line-height: 24px;
-        }
-        .subtitle {
-            padding-top: 4px;
-            font-size: 16px;
-            line-height: 16px;
-            text-transform: uppercase;
-        }
-    }
-    .buttonsRow {
-        margin: 8px;
-        flex-grow: 0;
-
-        .materialBtn {
-            display: inline-block;
-            min-width: 100px;
-            padding: 5px;
-            font-size: 20px;
-            line-height: 36px;
-            text-align: center;
-            border-radius: 2px;
-
-            &:not(:first-of-type) {
-                margin-left: 8px;
-            }
-        }
+        overflow: hidden;
+        border-radius: 2px;
     }
 }
