--- a/src/Button/index.scss
+++ b/src/Button/index.scss
@@ -35,12 +35,12 @@
         border-radius: 3px;
         box-shadow: 0 2px 6px 0 rgba($black, 0.3);
 
-        &:hover {
-            box-shadow: 0 3px 8px 0 rgba($black, 0.5);
-        }
-        &:active {
-            box-shadow: 0 3px 12px 0 rgba($black, 0.5);
-        }
+        // &:hover {
+        //     box-shadow: 0 3px 8px 0 rgba($black, 0.5);
+        // }
+        // &:active {
+        //     box-shadow: 0 3px 12px 0 rgba($black, 0.5);
+        // }
     }
     &.flat {
         @extend %button;
@@ -48,12 +48,12 @@
         box-shadow: none;
         transition: background 0.3s;
 
-        &:hover {
-            background: rgba($grey, 0.2);
-        }
-        &:active {
-            background: rgba($grey, 0.4);
-        }
+        // &:hover {
+        //     background: rgba($grey, 0.2);
+        // }
+        // &:active {
+        //     background: rgba($grey, 0.4);
+        // }
     }
     $spanSize: 30px;
     &.iconBtn {
@@ -219,27 +219,5 @@
             transform: rotate(45deg);
             transform-origin: 100% 100%;
         }
-    }
-}
-
-.ripple {
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    background: #CCC;
-    border-radius: 100%;
-    transform: scale(0);
-
-    &.animate {
-        animation: ripple 1s ease-out;
-    }
-}
-
-@keyframes ripple {
-    100% {
-        opacity: 0;
-        transform: scale(2.5);
     }
 }
