--- a/src/ripple/index.scss
+++ b/src/ripple/index.scss
@@ -6,33 +6,51 @@
     width: 100%;
     height: 100%;
     pointer-events: none;
-    background: #CCC;
-    border-radius: 100%;
     opacity: 1;
-    transform: scale(0);
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-    transition: transform 1s, opacity 1s;
+    transition-duration: 1s;
+    transition-property: transform, opacity;
+    transition-timing-function: $materialTiming;
 
+    .innerRipple {
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        pointer-events: none;
+        background: rgba($black, 0.2);
+        border-radius: 100%;
+        animation: rippleFocus 1s ease infinite;
+        animation-play-state: paused;
+    }
+    &.starting {
+        transform: scale(1);
+    }
     &.ending {
         opacity: 0;
-        transform: scale(2.5);
+        transform: scale(5);
+    }
+    &.canceled {
+        opacity: 0;
+        transform: scale(0);
     }
     &.focus {
-        animation-iteration-count: infinite;
-        animation-name: rippleFocus;
-        animation-timing-function: ease-out;
+        transform: scale(1);
+
+        .innerRipple {
+            animation-play-state: running;
+        }
     }
 }
 
 @keyframes rippleFocus {
     0% {
-        transform: scale(0.5);
-    }
-    50% {
         transform: scale(0.7);
     }
+    50% {
+        transform: scale(0.75);
+    }
     100% {
-        transform: scale(0.5);
+        transform: scale(0.7);
     }
 }
