--- a/src/ripple/index.scss
+++ b/src/ripple/index.scss
@@ -7,7 +7,6 @@
     height: 100%;
     pointer-events: none;
     opacity: 1;
-    // visibility: hidden;
     transform: scale(0);
     transition-property: transform, opacity;
     transition-timing-function: $materialTiming;
@@ -21,15 +20,17 @@
         pointer-events: none;
         background: rgba($black, 0.2);
         border-radius: 100%;
-        animation: rippleFocus 1s ease infinite;
+        animation-iteration-count: infinite;
+        animation-name: rippleFocus;
         animation-play-state: paused;
+        animation-timing-function: $materialTiming;
     }
     &.starting {
         transform: scale(1);
     }
     &.ending {
         opacity: 0;
-        transform: scale(1.25);
+        transform: scale(2);
     }
     &.canceled {
         opacity: 0;
@@ -46,12 +47,12 @@
 
 @keyframes rippleFocus {
     0% {
-        transform: scale(0.7);
+        transform: scale(0.5);
     }
     50% {
-        transform: scale(0.75);
+        transform: scale(0.55);
     }
     100% {
-        transform: scale(0.7);
+        transform: scale(0.5);
     }
 }
