--- a/src/_story.scss
+++ b/src/_story.scss
@@ -3,3 +3,16 @@ body {
     font-family: Roboto;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+.materialButton.raised.bigButton {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    display: inline-block;
+    width: calc(90vw - 32px);
+    height: calc(90vh - 20px);
+    font-size: 20vh;
+    line-height: calc(90vh - 20px);
+    text-align: center;
+    transform: translate(-50%, -50%);
+    transition: transform 0.5s, width 0.5s, height 0.5s, font-size 0.5s;
+}
