--- a/src/Button/index.scss
+++ b/src/Button/index.scss
@@ -20,6 +20,9 @@
         vertical-align: middle;
         outline: 0;
     }
+    &.disabled {
+        opacity: 0.5;
+    }
 }
 .materialButton {
     display: inline-block;
@@ -32,11 +35,13 @@
         border-radius: 3px;
         box-shadow: 0 2px 6px 0 rgba($black, 0.3);
 
-        &:hover {
-            box-shadow: 0 3px 8px 0 rgba($black, 0.5);
-        }
-        &:active {
-            box-shadow: 0 3px 12px 0 rgba($black, 0.5);
+        &:not(.disabled) {
+            &:hover {
+                box-shadow: 0 3px 8px 0 rgba($black, 0.5);
+            }
+            &:active {
+                box-shadow: 0 3px 12px 0 rgba($black, 0.5);
+            }
         }
     }
     &.flat {
@@ -45,11 +50,13 @@
         box-shadow: none;
         transition: background 0.3s;
 
-        &:hover {
-            background: rgba($grey, 0.2);
-        }
-        &:active {
-            background: rgba($grey, 0.4);
+        &:not(.disabled) {
+            &:hover {
+                background: rgba($grey, 0.2);
+            }
+            &:active {
+                background: rgba($grey, 0.4);
+            }
         }
     }
     $spanSize: 30px;
