--- a/src/_story.scss
+++ b/src/_story.scss
@@ -1,17 +1,30 @@
+html,
+body,
+#root {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 body {
     font-family: Roboto;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+#root {
+    padding: 10px;
 }
 .materialButton.raised.bigButton {
     position: absolute;
     top: 50%;
     left: 50%;
     display: inline-block;
-    width: calc(90vw - 32px);
-    height: calc(90vh - 20px);
+    width: calc(100vw - 50px);
+    height: calc(100vh - 50px);
     font-size: 20vh;
-    line-height: calc(90vh - 20px);
+    line-height: calc(100vh - 50px);
     text-align: center;
     transform: translate(-50%, -50%);
-    transition: transform 0.5s, width 0.5s, height 0.5s, font-size 0.5s;
+    box-sizing: border-box;
+    transition: transform 0.5s, width 0.5s, height 0.5s, font-size 0.5s, box-shadow 0.3s, background 0.3s;
 }
