Use Button component instead of li elems (but tell the Button to use a li elem as a wrapper). This is the easiest way to add ripples to the Select

--- a/src/Select/index.scss
+++ b/src/Select/index.scss
@@ -28,7 +28,7 @@ $transitionDuration: 0.2s;
             transition: background $transitionDuration ease, border $transitionDuration linear, transform $transitionDuration linear, height $transitionDuration linear, box-shadow $transitionDuration ease;
 
             li {
-                transition: height $transitionDuration linear, opacity $transitionDuration ease, margin $transitionDuration linear;
+                transition: background 0.3s, height $transitionDuration linear, opacity $transitionDuration ease, margin $transitionDuration linear;
             }
         }
     }
@@ -62,6 +62,7 @@ $transitionDuration: 0.2s;
             width: 0px;
         }
         li {
+            display: block;
             cursor: pointer;
             font-size: 15px;
             list-style: none;
