--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -406,7 +406,7 @@ $white: #FFF;
 $black: #000;
 
 $list-main: $list-indigo;
-$list-accent: $list-amber;
+$list-accent: $list-pink;
 
 
 $main-50: nth($list-main, 1);
