General cleanup. Got rid of lodash from Select. Moved some variables from state to props (and added them to defaultProps). Clear the timeout that deals with the zIndex, when the component is unmounted. Optimize parseOptions function. Fix: if the select was required, it wouldn't open.

--- a/src/Select/index.scss
+++ b/src/Select/index.scss
@@ -72,6 +72,9 @@ $transitionDuration: 0.2s;
             overflow: hidden;
             user-select: none;
 
+            &.hidden {
+                display: none;
+            }
             &.selected {
                 height: 48px;
             }
