--- a/src/Select/index.scss
+++ b/src/Select/index.scss
@@ -3,20 +3,20 @@
 $errorColor: $red-500;
 $transitionDuration: 0.2s;
 
-.materialSelect{
-    height: 48px;
+.materialSelect {
     position: relative;
+    height: 48px;
     user-select: none;
 
-    &.inline{
+    &.inline {
         display: inline-block;
     }
-    &:not(.inline){
+    &:not(.inline) {
         display: block;
         width: 100%;
     }
     &.error {
-        .select:not(.open){
+        .select:not(.open) {
             border: 1px solid $errorColor !important;
         }
         .message {
@@ -34,42 +34,42 @@ $transitionDuration: 0.2s;
     }
     .select {
         position: absolute;
-        margin: 0;
-        padding: 0;
         top: -1px;
         left: 0;
-        user-select: none;
         width: 100%;
-        text-align: center;
         height: 48px;
+        padding: 0;
+        margin: 0;
         overflow: hidden;
-        border: 1px solid rgba($black, 0);
-        box-shadow: 0 0 0 0 rgba($black, 0);
+        text-align: center;
         background-color: $white;
+        border: 1px solid rgba($black, 0);
         transform: translate(0, 0);
+        box-shadow: 0 0 0 0 rgba($black, 0);
+        user-select: none;
 
-        &:after {
-            border-left: 5px solid transparent;
-            border-right: 5px solid transparent;
-            border-top: 5px solid $grey-400;
-            content: '';
-            display: block;
-            height: 0px;
+        &::after {
             position: absolute;
-            pointer-events: none;
             top: 19px;
             right: 10px;
-            width: 0px;
+            display: block;
+            width: 0;
+            height: 0;
+            pointer-events: none;
+            border-top: 5px solid $grey-400;
+            border-right: 5px solid transparent;
+            border-left: 5px solid transparent;
+            content: '';
         }
         li {
-            display: block;
-            cursor: pointer;
-            font-size: 15px;
-            list-style: none;
-            line-height: 48px;
-            padding: 0 48px 0 24px;
             position: relative;
+            display: block;
+            padding: 0 48px 0 24px;
             overflow: hidden;
+            font-size: 15px;
+            line-height: 48px;
+            list-style: none;
+            cursor: pointer;
             user-select: none;
 
             &.hidden {
@@ -79,7 +79,7 @@ $transitionDuration: 0.2s;
                 height: 48px;
             }
             &:not(.selected) {
-                height: 0px;
+                height: 0;
                 opacity: 0;
             }
         }
@@ -87,17 +87,17 @@ $transitionDuration: 0.2s;
             z-index: 9999;
         }
         &.open {
-            background-color: $grey-50;
-            border-radius: 2px;
-            border-width: 0;
-            box-shadow: 2px 2px 5px 0 rgba($black, 0.3);
-            padding-bottom: 0;
             height: 240px;
+            padding-bottom: 0;
+            background-color: $grey-50;
+            border-width: 0;
+            border-radius: 2px;
+            box-shadow: 2px 2px 5px 0 rgba($black, 0.3);
 
-            &:after {
+            &::after {
                 display: none;
             }
-            &:before {
+            &::before {
                 border-color: transparent !important;
             }
             li {
@@ -132,11 +132,11 @@ $transitionDuration: 0.2s;
             }
         }
     }
-    .message{
+    .message {
         position: absolute;
         top: 50px;
+        display: none;
         width: 100%;
         color: $errorColor;
-        display: none;
     }
 }
