--- a/src/Button/index.scss
+++ b/src/Button/index.scss
@@ -21,12 +21,63 @@
         outline: 0;
     }
     &.disabled {
+        cursor: no-drop;
         opacity: 0.5;
     }
 }
 .materialButton {
+    $loaderHeight: 4px;
+
     display: inline-block;
 
+    &__loader {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 0;
+        overflow: hidden;
+        background: $main-200;
+    }
+    &__loaderHighlight {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 0;
+        height: $loaderHeight;
+        background: $main-500;
+        transition: width 0.3s;
+    }
+    &--loading {
+        .materialButton__loader {
+            height: $loaderHeight;
+        }
+    }
+    &--indeterminate {
+        .materialButton__loaderHighlight {
+            width: 100%;
+            height: 0;
+
+            &::before,
+            &::after {
+                position: absolute;
+                top: -$loaderHeight;
+                bottom: 0;
+                left: 0;
+                height: $loaderHeight;
+                background-color: inherit;
+                content: '';
+                will-change: left, right;
+            }
+            &::before {
+                animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
+            }
+            &::after {
+                animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+                animation-delay: 1.15s;
+            }
+        }
+    }
     &.raised {
         @extend %button;
 
@@ -235,5 +286,35 @@
                 transform-origin: 100% 100%;
             }
         }
+    }
+}
+
+@keyframes indeterminate {
+    0% {
+        right: 100%;
+        left: -35%;
+    }
+    60% {
+        right: -90%;
+        left: 100%;
+    }
+    100% {
+        right: -90%;
+        left: 100%;
+    }
+}
+
+@keyframes indeterminate-short {
+    0% {
+        right: 100%;
+        left: -200%;
+    }
+    60% {
+        right: -8%;
+        left: 107%;
+    }
+    100% {
+        right: -8%;
+        left: 107%;
     }
 }
